hphp/test/zend/good/ext/filter/tests/bug39846.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("filter")) die("skip");
}
