hphp/test/zend/bad/ext/phar/tests/open_for_write_newfile_c.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (version_compare(PHP_VERSION, "5.3", "<")) die("skip requires 5.3 or later");
?>